# atheriz

./: .gitignore  README.md  master_to_dill.diff  pyproject.toml  repro_output.txt  test_output.txt
atheriz/: atheriz.py  connection_screen.py  coord.py  database_setup.py  initial_setup.py  inputfuncs.py  logger.py  menu.py  new.py  pathfind.py  reloader.py  settings.py  utils.py  websocket.py
atheriz/commands/: base_cmd.py  base_cmdset.py  cmdset.py
atheriz/globals/: asyncthreadpool.py  autosave.py  get.py  map.py  node.py  objects.py  salt.py  startstop.py  time.py
atheriz/network/: __init__.py  connection.py  manager.py  protocol.py  telnet.py  websocket.py
atheriz/objects/: base_account.py  base_channel.py  base_db_ops.py  base_door.py  base_flags.py  base_lock.py  base_obj.py  base_script.py  contents.py  funcparser.py  funcparser_helpers.py  nodes.py  persist.py  session.py
atheriz/singletons/: asyncthreadpool.py  get.py  map.py  node.py  objects.py  startstop.py  time.py
atheriz/tests/: conftest.py  fakes.py  test_account.py  test_at_hear_replace.py  test_atheriz_main.py  test_autosave.py  test_ban_command.py  test_base_cmd.py  test_base_cmdset.py  test_build_command.py  test_channel.py  test_connection.py  test_connection_manager.py  test_connection_screen.py  test_contents_helpers.py  test_database_setup.py  test_db_ops.py  test_delete.py  test_delete_command.py  test_door.py  test_flags.py  test_follow.py  test_funcparser.py  test_give.py  test_globals_get.py  test_group.py  test_help_cmdset_create_follow_group_move_socials.py  test_inputfuncs.py  test_intent_extra.py  test_intent_extra2.py  (+45 more)
docs/: 01_getting_started.md  02_core_concepts.md  03_command_system.md  04_scripts_and_hooks.md  05_persistence.md  06_settings.md  07_mixins.md  08_input_handling.md  09_time_system.md  10_utilities_advanced.md  11_api_reference.md  11_async_threadpool.md  11_recipes.md  12_api_reference.md  12_webclient.md  13_api_reference.md  13_menu_engine.md  14_api_reference.md  15_sound_propagation.md  README.md  generate_api.py  table_of_contents.md
example_game/: access.py  account.py  channel.py  connection_screen.py  database_setup.py  db_ops.py  door.py  flags.py  initial_setup.py  inputfuncs.py  node.py  object.py  objects.py  script.py  server_events.py  settings.py
save/: time
test_repro_data/: areas  object_map  objects
tests/: reproduce_issue.py  reproduce_issue_split.py  test_min_serialization.py
(+57 files in other folders)
